[package]
name = "rust-aws-sns"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rusoto_core = "0.46.0"
rusoto_sns = "0.46.0"
tokio = { version = "1.1.1", features = ["full"] }
