[package]
name = "rust-aws-sns"
version = "0.4.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Package sms provides a small wrapper around AWS SNS to make SMS usage more friendly."
repository = "https://github.com/SachinMaharana/rust-aws-sns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rusoto_core = "0.46.0"
rusoto_sns = "0.46.0"


[dev-dependencies]
tokio = { version = "1.1.1", features = ["full"] }
rust-aws-sns = "0.2.0"
